[tool.poetry]
name = "scheduling"
version = "0.1.0"
description = ""
authors = ["Jeroen van Riel <jeroenvanriel@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
manim = "^0.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
